--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
     "@ai-sdk/google": "^2.0.11",
     "ai": "^5.0.27",
+    "katex": "^0.16.22",
     "next": "15.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
