--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ai-sdk/google": "^2.0.11",
     "ai": "^5.0.27",
     "katex": "^0.16.22",
+    "mathjs": "^14.7.0",
     "next": "15.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
