--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "baseUrl": "src",
     "target": "ES2017",
     "lib": [
       "dom",
@@ -24,7 +25,7 @@
     ],
     "paths": {
       "@/*": [
-        "./src/*"
+        "*"
       ]
     },
     "types": []
